<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".activity.MainActivity">

    <TextureView
            android:id="@+id/textureView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:id="@+id/ipAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/portInput"
            android:ems="10"
            android:hint="@string/ip_address"
            android:inputType="textPersonName"
            android:text="@string/port"
            android:textSize="34sp" android:autofillHints=""/>

    <EditText
            android:id="@+id/portInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/connectButton"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/port1"
            android:inputType="textPersonName"
            android:text="@string/_6666"
            android:textSize="34sp"
            android:autofillHints=""/>

    <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="5dp"
            android:text="@string/connect"
            android:textSize="34sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="115dp"/>

    <Button
            android:id="@+id/changeAspectRatioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ipAddressInput"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="0dp"
            android:text="@string/change_aspect_ratio"
            android:layout_alignParentRight="true"
            android:layout_marginRight="11dp"/>

    <Button
            android:id="@+id/changeCameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/changeAspectRatioBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-7dp"
            android:text="@string/change_camera" android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"/>


</RelativeLayout>